app-in-apps/yaml/adguardhome/service-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-service-loadbalanced
  labels:
    app: adguard
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - name: dnstcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: dnsudp
      port: 53
      protocol: UDP
      targetPort: 53
  type: LoadBalancer
