app-in-apps/yaml/adguardhome/service-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-service-ingress
  labels:
    app: adguard
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - name: adminpanel
      port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
