app-in-apps/yaml/adguardhome/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  namespace: adguard
  labels:
    app: adguard
  annotations:
    kubernetes.io/ingress.class: haproxy
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  ingressClassName: haproxy
  rules:
    - host: adguard.nexus-core.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: adguard-service-ingress
                port:
                  name: adminpanel
  tls:
    - hosts:
        - adguard.nexus-core.dev
      secretName: adguard-ingress-secret
